split inner and outer

--- a/test.html
+++ b/test.html
@@ -11,10 +11,10 @@
 <body>
 
   <script type="module">
-    import { getSavedWindowState } from './index.js';
+    import { saveWindowStateBeforeUnload, restoreWindowState } from './index.js'
 
-    window.open('./test.html', undefined, `${getSavedWindowState(800, 600, 0, 0)}`);
-    // window.open('./test.html', undefined, `popup=1,${getSavedWindowState()}`);
+    // restoreWindowState();
+    saveWindowStateBeforeUnload();
 
   </script>
 
