--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
   <script type="module">
     import { saveWindowStateBeforeUnload, restoreWindowState } from './index.js'
 
-    // restoreWindowState();
+    restoreWindowState();
     saveWindowStateBeforeUnload();
 
   </script>
